# xmac

./: .gitignore  README.md  package.json  tsconfig.json  xmac.ts
.github/workflows/: ci.yml  release.yml
examples/: CMakeLists.txt  greeter.c  hello.c  hello.cpp  hello.m
src/: bytes.ts  catalog.ts  commands.ts  cpio.ts  exec.ts  extract.ts  main.ts  net.ts  pbzx.ts  toolchain.ts  ui.ts  util.ts  xar.ts  xml.ts
test/: smoke.test.ts
